--- a/src/scss/utils/_color.scss
+++ b/src/scss/utils/_color.scss
@@ -28,7 +28,9 @@ $colors: ("primary": $primary,
     "has-error": $has-error,
     "blue-light": $blue-light,
     "blue-light2": $blue-light2,
+    "blue-light3": $blue-light3,
     "blue-border": $blue-border,
+    "blue-border2": $blue-border2,
     "sucess": $sucess,
     "dark-blue": $dark-blue,
     "blue-shade": $blue-shade,
