--- a/src/scss/utils/_variable.scss
+++ b/src/scss/utils/_variable.scss
@@ -28,7 +28,9 @@ $light-gray4: #cccccc;
 $has-error: #BF0101;
 $blue-light: #E6F1F9;
 $blue-light2: #F2F8FD;
+$blue-light3: #67A6D9;
 $blue-border: #99C4E5;
+$blue-border2: #CCE1F2;
 $dark-blue: #22305D;
 $blue-shade: #F2F7FC !default;
 
