Design of client profile notes page for responsive is updated

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -41,6 +41,10 @@ a {
     color: var(--color-blue);
 }
 
+.text-black{
+    color: var(--color-black);
+}
+
 .text-sucess {
     color: var(--color-sucess);
 
