--- a/src/assets/css/pages/client-profile.css
+++ b/src/assets/css/pages/client-profile.css
@@ -179,27 +179,27 @@
   border-radius: 10px;
 }
 .user-card .user-details .user-img .tag.silver {
-  background: -webkit-gradient(linear, left top, left bottom, from(#E9E9E9), to(#A6A6A6));
-  background: -o-linear-gradient(top, #E9E9E9 0%, #A6A6A6 100%);
-  background: linear-gradient(180deg, #E9E9E9 0%, #A6A6A6 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#e9e9e9), to(#a6a6a6));
+  background: -o-linear-gradient(top, #e9e9e9 0%, #a6a6a6 100%);
+  background: linear-gradient(180deg, #e9e9e9 0%, #a6a6a6 100%);
   color: #444444;
 }
 .user-card .user-details .user-img .tag.gold {
-  background: -webkit-gradient(linear, left top, left bottom, from(#E7B536), to(#775D1A));
-  background: -o-linear-gradient(top, #E7B536 0%, #775D1A 100%);
-  background: linear-gradient(180deg, #E7B536 0%, #775D1A 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#e7b536), to(#775d1a));
+  background: -o-linear-gradient(top, #e7b536 0%, #775d1a 100%);
+  background: linear-gradient(180deg, #e7b536 0%, #775d1a 100%);
   color: var(--color-white);
 }
 .user-card .user-details .user-img .tag.platinum {
-  background: -webkit-gradient(linear, left top, left bottom, from(#42C2EA), to(#328FAC));
-  background: -o-linear-gradient(top, #42C2EA 0%, #328FAC 100%);
-  background: linear-gradient(180deg, #42C2EA 0%, #328FAC 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#42c2ea), to(#328fac));
+  background: -o-linear-gradient(top, #42c2ea 0%, #328fac 100%);
+  background: linear-gradient(180deg, #42c2ea 0%, #328fac 100%);
   color: var(--color-white);
 }
 .user-card .user-details .user-img .tag.vip {
-  background: -webkit-gradient(linear, left top, left bottom, from(#DC6C05), to(#743F0E));
-  background: -o-linear-gradient(top, #DC6C05 0%, #743F0E 100%);
-  background: linear-gradient(180deg, #DC6C05 0%, #743F0E 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#dc6c05), to(#743f0e));
+  background: -o-linear-gradient(top, #dc6c05 0%, #743f0e 100%);
+  background: linear-gradient(180deg, #dc6c05 0%, #743f0e 100%);
   color: var(--color-white);
 }
 .user-card .user-details .user-data h2 {
@@ -965,24 +965,6 @@
   margin-top: 20px;
   margin-bottom: 20px;
 }
-.note-container .notes-data .documents-attached.edit-mode.row > * {
-  width: 100%;
-}
-.note-container .notes-data .documents-attached.edit-mode.row .doc-card {
-  margin-bottom: 12px;
-  background-color: var(--color-white);
-  border: 1px solid var(--color-border-light);
-  font-weight: 500;
-}
-.note-container .notes-data .documents-attached.edit-mode.row .doc-card.add-document {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background: -webkit-gradient(linear, left bottom, left top, from(var(--color-blue-light)), to(var(--color-blue-light))), -webkit-gradient(linear, left bottom, left top, from(var(--color-blue-light3)), to(var(--color-blue-light3)));
-  background: -o-linear-gradient(bottom, var(--color-blue-light), var(--color-blue-light)), -o-linear-gradient(bottom, var(--color-blue-light3), var(--color-blue-light3));
-  background: linear-gradient(0deg, var(--color-blue-light), var(--color-blue-light)), linear-gradient(0deg, var(--color-blue-light3), var(--color-blue-light3));
-  border: 1px dashed var(--color-blue-light3);
-}
 .note-container .notes-data .documents-attached .doc-card {
   padding: 8px;
   border-radius: 7px;
@@ -1015,6 +997,27 @@
   -o-object-fit: center;
      object-fit: center;
   margin-left: 14px;
+}
+.note-container .notes-data .policy-details.edit-mode .documents-attached > * {
+  width: 100%;
+}
+.note-container .notes-data .policy-details.edit-mode .documents-attached .doc-card {
+  margin-bottom: 12px;
+  background-color: var(--color-white);
+  border: 1px solid var(--color-border-light);
+  font-weight: 500;
+}
+.note-container .notes-data .policy-details.edit-mode .documents-attached .doc-card.add-document {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: -webkit-gradient(linear, left bottom, left top, from(var(--color-blue-light)), to(var(--color-blue-light))), -webkit-gradient(linear, left bottom, left top, from(var(--color-blue-light3)), to(var(--color-blue-light3)));
+  background: -o-linear-gradient(bottom, var(--color-blue-light), var(--color-blue-light)), -o-linear-gradient(bottom, var(--color-blue-light3), var(--color-blue-light3));
+  background: linear-gradient(0deg, var(--color-blue-light), var(--color-blue-light)), linear-gradient(0deg, var(--color-blue-light3), var(--color-blue-light3));
+  border: 1px dashed var(--color-blue-light3);
+}
+.note-container .notes-data .policy-details.edit-mode .notes-option {
+  opacity: 0.25;
 }
 .note-container .notes-data .updated-items .updated-item {
   display: -webkit-box;
@@ -1056,7 +1059,7 @@
   margin-bottom: 12px;
 }
 .note-container .notes-data .pinned-comment {
-  background: #E6F9ED;
+  background: #e6f9ed;
   margin: 15px -12px;
   padding: 12px;
 }
@@ -1111,12 +1114,12 @@
 }
 .note-container .notes-data .comment .comment-details.edit-comment textarea {
   padding: 14px;
-  color: #B3B3B3;
+  color: #b3b3b3;
   font-size: 12px;
   font-weight: 400;
   line-height: 18px;
 }
-@media screen and (max-width: 568px) {
+@media screen and (max-width: 768px) {
   .note-container .notes-side-bar,
   .note-container .notes-data {
     width: 100%;
@@ -1126,6 +1129,11 @@
   }
 }
 
+@media screen and (min-width: 578px) {
+  .w-sm-auto {
+    width: auto !important;
+  }
+}
 @media screen and (max-width: 992px) {
   .user-card {
     -webkit-box-align: center;
