--- a/src/scss/pages/client-profile.scss
+++ b/src/scss/pages/client-profile.scss
@@ -166,6 +166,7 @@
 
 .policy-table {
   border-spacing: 0 10px;
+  margin-bottom: 0;
   border-collapse: separate;
 
   .policy-name-column {
@@ -240,6 +241,15 @@
       .show-hover {
         display: inline;
       }
+    }
+  }
+
+  @media screen and (max-width: 778px) {
+    .btn.btn-lg{
+      width: 100vw;
+      max-width: 100vw;
+      margin: 10px -15px;
+
     }
   }
 }
