--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -338,6 +338,10 @@ a {
   color: var(--color-sucess);
 }
 
+.bg-light-blue {
+  background-color: #F2F7FC;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1661,6 +1665,7 @@ tr:last-child td:last-child {
 
 .policy-table {
   border-spacing: 0 10px;
+  margin-bottom: 0;
   border-collapse: separate;
 }
 .policy-table .policy-name-column {
@@ -1720,6 +1725,13 @@ tr:last-child td:last-child {
 }
 .cta-block .btn:hover .show-hover {
   display: inline;
+}
+@media screen and (max-width: 778px) {
+  .cta-block .btn.btn-lg {
+    width: 100vw;
+    max-width: 100vw;
+    margin: 10px -15px;
+  }
 }
 
 .refer-section {
@@ -2503,6 +2515,14 @@ tr:last-child td:last-child {
     margin-bottom: 10px;
   }
 }
+.properties-container {
+  background: -webkit-gradient(linear, left bottom, left top, from(#f2f7fc), to(#f2f7fc)), -webkit-gradient(linear, left bottom, left top, from(#e6e6e6), to(#e6e6e6));
+  background: -o-linear-gradient(bottom, #f2f7fc, #f2f7fc), -o-linear-gradient(bottom, #e6e6e6, #e6e6e6);
+  background: linear-gradient(0deg, #f2f7fc, #f2f7fc), linear-gradient(0deg, #e6e6e6, #e6e6e6);
+  border-radius: 4px;
+  border: 1px solid #E6E6E6;
+}
+
 .navbar-toggler {
   background-image: url(/images/menu.svg);
   background-repeat: no-repeat;
@@ -3154,12 +3174,12 @@ input[type=date]::-webkit-calendar-picker-indicator {
   background-color: white;
 }
 .accordion.custom .accordion-item.accordion-blue > .accordion-header .accordion-button {
-  background: #F2F7FC;
+  background: #f2f7fc;
   border: 0;
   border-radius: 0;
   padding: 5px 28px;
 }
-.accordion.custom .accordion-item.accordion-blue > .accordion-header .accordion-button img {
+.accordion.custom .accordion-item.accordion-blue > .accordion-header .accordion-button > img {
   margin-right: 16px;
   width: 50px;
   height: 50px;
@@ -3170,6 +3190,29 @@ input[type=date]::-webkit-calendar-picker-indicator {
 }
 .accordion.custom .accordion-item.accordion-blue > .accordion-header .accordion-button:after {
   content: none;
+}
+@media screen and (max-width: 768px) {
+  .accordion.custom .accordion-item.accordion-blue > .accordion-header .accordion-button {
+    -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.168627451);
+            box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.168627451);
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 5px 10px;
+  }
+  .accordion.custom .accordion-item.accordion-blue > .accordion-header .accordion-button[aria-expanded=false] .serach-box {
+    display: none;
+  }
+  .accordion.custom .accordion-item.accordion-blue > .accordion-header .accordion-button[aria-expanded=true] .serach-box {
+    display: block;
+    margin-bottom: 5px;
+    width: 100%;
+  }
+  .accordion.custom .accordion-item.accordion-blue > .accordion-header .accordion-button[aria-expanded=true] .serach-box .input-group.search {
+    border-radius: 6px;
+  }
+  .accordion.custom .accordion-item.accordion-blue > .accordion-collapse > .accordion-body {
+    padding: 13px 5px 0;
+  }
 }
 .accordion.custom .accordion-item.accordion-white {
   border: 0;
@@ -3185,7 +3228,7 @@ input[type=date]::-webkit-calendar-picker-indicator {
   border-radius: 0;
   padding: 12px 16px;
 }
-.accordion.custom .accordion-item.accordion-white > .accordion-header .accordion-button img {
+.accordion.custom .accordion-item.accordion-white > .accordion-header .accordion-button > img {
   margin-right: 16px;
   width: 24px;
   -o-object-fit: contain;
@@ -3203,6 +3246,23 @@ input[type=date]::-webkit-calendar-picker-indicator {
   line-height: 1.375rem;
   font-weight: 400;
   color: var(--color-light-gray);
+}
+@media screen and (max-width: 768px) {
+  .accordion.custom .accordion-item.accordion-white {
+    border-radius: 10px;
+    overflow: hidden;
+  }
+  .accordion.custom .accordion-item.accordion-white > .accordion-header .accordion-button {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .accordion.custom .accordion-item.accordion-white > .accordion-header .accordion-button > img {
+    margin-top: 5px;
+  }
+  .accordion.custom .accordion-item.accordion-white > .accordion-collapse > .accordion-body {
+    padding: 13px 10px 10px;
+  }
 }
 .accordion.custom .accordion-button {
   -webkit-box-shadow: none;
