--- a/src/scss/component/_accordion.scss
+++ b/src/scss/component/_accordion.scss
@@ -1,137 +1,175 @@
 @use "../utils" as *;
 
-
 // 30 march
 .accordion {
-	&.custom {
-		.accordion-item {
-			background: var(--color-blue-light2);
-			border-color: var(--color-border-light);
+  &.custom {
+    .accordion-item {
+      background: var(--color-blue-light2);
+      border-color: var(--color-border-light);
 
-			&:first-of-type {
-				border-top-left-radius: 8px;
-				border-top-right-radius: 8px;
-			}
+      &:first-of-type {
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
+      }
 
-			&:last-of-type {
-				border-bottom-right-radius: 8px;
-				border-bottom-left-radius: 8px;
-			}
+      &:last-of-type {
+        border-bottom-right-radius: 8px;
+        border-bottom-left-radius: 8px;
+      }
 
-			&.accordion-blue {
-				border: 0;
-				border-radius: 0;
-				margin-bottom: 20px;
-				background-color: white;
+      &.accordion-blue {
+        border: 0;
+        border-radius: 0;
+        margin-bottom: 20px;
+        background-color: white;
 
-				&>.accordion-header .accordion-button {
-					background: #F2F7FC;
-					border: 0;
-					border-radius: 0;
-					padding: 5px 28px;
+        & > .accordion-header .accordion-button {
+          background: #f2f7fc;
+          border: 0;
+          border-radius: 0;
+          padding: 5px 28px;
 
-					img {
-						margin-right: 16px;
-						width: 50px;
-						height: 50px;
-						object-fit: contain;
-						object-position: center;
-					}
+          > img {
+            margin-right: 16px;
+            width: 50px;
+            height: 50px;
+            object-fit: contain;
+            object-position: center;
+          }
 
-					&:after {
-						content: none;
-					}
-				}
-			}
+          &:after {
+            content: none;
+          }
+        }
 
-			&.accordion-white {
-				border: 0;
-				border-radius: 0;
-				margin-bottom: 16px;
-				background-color: var(--color-white);
-				box-shadow: 0px 20px 30px 0px #00000014;
+        @media screen and (max-width: 768px) {
+          & > .accordion-header .accordion-button {
+            box-shadow: 0px 3px 8px 0px #0000002b;
+            flex-wrap: wrap;
+            padding: 5px 10px;
 
-				&>.accordion-header .accordion-button {
-					background: var(--color-white);
-					border: 0;
-					border-radius: 0;
-					padding: 12px 16px;
+            &[aria-expanded="false"] .serach-box {
+              display: none;
+            }
+            &[aria-expanded="true"] .serach-box {
+              display: block;
+              margin-bottom: 5px;
+              width: 100%;
+              .input-group.search {
+                border-radius: 6px;
+              }
+            }
+          }
 
+          & > .accordion-collapse > .accordion-body {
+            padding: 13px 5px 0;
+          }
+        }
+      }
 
-					img {
-						margin-right: 16px;
-						width: 24px;
-						object-fit: contain;
-						object-position: center;
-					}
+      &.accordion-white {
+        border: 0;
+        border-radius: 0;
+        margin-bottom: 16px;
+        background-color: var(--color-white);
+        box-shadow: 0px 20px 30px 0px #00000014;
 
-					.accordion-title {
-						h4 {
-							@include toRem(font-size, 16);
-							@include toRem(line-height, 24);
-							font-weight: 400;
-						}
+        & > .accordion-header .accordion-button {
+          background: var(--color-white);
+          border: 0;
+          border-radius: 0;
+          padding: 12px 16px;
 
-						p {
-							@include toRem(font-size, 14);
-							@include toRem(line-height, 22);
-							font-weight: 400;
-							color: var(--color-light-gray);
-						}
-					}
-				}
-			}
-		}
+          > img {
+            margin-right: 16px;
+            width: 24px;
+            object-fit: contain;
+            object-position: center;
+          }
 
-		.accordion-button {
-			// display: flex;
-			// justify-content: space-between;
-			box-shadow: none;
-			outline: none;
-			border: none;
-			background: var(--color-white);
-			padding-right: 60px;
+          .accordion-title {
+            h4 {
+              @include toRem(font-size, 16);
+              @include toRem(line-height, 24);
+              font-weight: 400;
+            }
 
-			&:not(.collapsed) {
-				background: transparent;
+            p {
+              @include toRem(font-size, 14);
+              @include toRem(line-height, 22);
+              font-weight: 400;
+              color: var(--color-light-gray);
+            }
+          }
+        }
 
-				&:after {
-					transform: translateY(-50%) rotate(-180deg);
-				}
-			}
+        @media screen and (max-width: 768px) {
+          & {
+            border-radius: 10px;
+            overflow: hidden;
+          }
+          & > .accordion-header .accordion-button {
+            align-items: flex-start;
+            > img {
+              margin-top: 5px;
+            }
+          }
 
-			.button-right {
-				display: flex;
-				align-items: center;
+		  & > .accordion-collapse > .accordion-body {
+            padding: 13px 10px 10px;
+          }
+        }
+      }
+    }
 
-				.checkbox-inline {
-					margin-bottom: 0;
-				}
-			}
+    .accordion-button {
+      // display: flex;
+      // justify-content: space-between;
+      box-shadow: none;
+      outline: none;
+      border: none;
+      background: var(--color-white);
+      padding-right: 60px;
 
-			.title {
-				flex-grow: 1;
-				color: var(--color-black);
-			}
+      &:not(.collapsed) {
+        background: transparent;
 
-			.btn-delete {
-				img {
-					height: 15px;
-					width: 12.5px;
-				}
-			}
+        &:after {
+          transform: translateY(-50%) rotate(-180deg);
+        }
+      }
 
-			&:after {
-				width: 10px;
-				height: 6px;
-				background-image: url("../../images/down-arrow.svg");
-				background-size: 10px;
-				position: absolute;
-				right: 20px;
-				top: 50%;
-				transform: translateY(-50%)
-			}
+      .button-right {
+        display: flex;
+        align-items: center;
 
-		}
-	}
+        .checkbox-inline {
+          margin-bottom: 0;
+        }
+      }
+
+      .title {
+        flex-grow: 1;
+        color: var(--color-black);
+      }
+
+      .btn-delete {
+        img {
+          height: 15px;
+          width: 12.5px;
+        }
+      }
+
+      &:after {
+        width: 10px;
+        height: 6px;
+        background-image: url("../../images/down-arrow.svg");
+        background-size: 10px;
+        position: absolute;
+        right: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+    }
+  }
 }
