--- a/src/scss/component/_button.scss
+++ b/src/scss/component/_button.scss
@@ -164,6 +164,15 @@
 
     }
 
+    .acntt-btn.btn {
+       font-size: 11px !important;
+    }
+    
+    .acnt-btnn.btn {
+        font-size: 11px !important;
+     }
+     
+
 
 }
 
