--- a/src/scss/pages/add-vehicle.scss
+++ b/src/scss/pages/add-vehicle.scss
@@ -6,8 +6,12 @@
     }
 }
 
+@media screen and (max-width: 1199px) {
+  .content-main .content .remove-vehicle-block{
+        width: 100% !important;
+    }
 
-
+}
 @media screen and (max-width: 575px) {
     .price-box {
         .radio-check-switch {
@@ -46,6 +50,12 @@
                 font-size: 24px;
             }
         }
+    }
+    .remove-vehicle-block{
+        width: 100% !important;
+    }
+    .radio-check-switch .ins-title{
+        font-size: 13px !important;
     }
 }
 
