--- a/src/scss/pages/other-pages.scss
+++ b/src/scss/pages/other-pages.scss
@@ -63,7 +63,15 @@
 }
 
 .acnt-btn {
-    min-width: 225px !important;
+    min-width: 210px !important;
+}
+
+.acntt-btn {
+    min-width: 137px !important;
+}
+
+.acnt-btnn {
+    min-width: 210px !important;
 }
 
 .menuitemshow {
@@ -112,3 +120,19 @@
 //         transform: scale(0.96, 0.8) rotate(50deg);
 //     }
 // }
+
+
+.new-checkmark .radio-box-custom{
+    font-size: 16px;
+    color: var(--color-black);
+    font-weight: 400;
+  letter-spacing: normal;
+    font-family: "Roboto";
+    cursor: pointer;
+}
+
+.new-checkmark .radio-box-control:checked ~ .radio-box-custom{
+    color: var(--color-blue);
+    letter-spacing: normal;
+    font-weight: 600;
+}
