--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2523,6 +2523,48 @@ tr:last-child td:last-child {
   border: 1px solid #E6E6E6;
 }
 
+label.checkbox-inline.squar-boxes {
+  width: 150px;
+  height: 130px;
+  background: white;
+  margin: 20px;
+  border-radius: 12px;
+  -webkit-box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.0784313725);
+          box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.0784313725);
+  padding: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+}
+label.checkbox-inline.squar-boxes .checkbox-control:checked ~ .checkbox-custom {
+  background: transparent;
+}
+label.checkbox-inline.squar-boxes .checkbox-custom {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background: transparent;
+  border: 0;
+}
+label.checkbox-inline.squar-boxes .checkbox-custom::after {
+  border: solid #016bbf;
+  border-width: 0 2px 2px 0;
+}
+label.checkbox-inline.squar-boxes .checkbox-label {
+  margin: 0;
+}
+
 .navbar-toggler {
   background-image: url(/images/menu.svg);
   background-repeat: no-repeat;
