--- a/src/scss/pages/_housing-insurance.scss
+++ b/src/scss/pages/_housing-insurance.scss
@@ -6,3 +6,40 @@
   border-radius: 4px;
   border: 1px solid #E6E6E6;
   }
+
+
+  
+label.checkbox-inline.squar-boxes {
+  width: 150px;
+  height: 130px;
+  background: white;
+  margin: 20px;
+  border-radius: 12px;
+  box-shadow: 0px 20px 30px 0px #00000014;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  .checkbox-control:checked ~ .checkbox-custom {
+    background: transparent;
+  }
+  .checkbox-custom {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background: transparent;
+    border: 0;
+
+    &::after {
+      // display: none;
+      border: solid #016bbf;
+      border-width: 0 2px 2px 0;
+    }
+  }
+
+  .checkbox-label{
+    margin: 0;
+  }
+}
