--- a/src/scss/pages/other-pages.scss
+++ b/src/scss/pages/other-pages.scss
@@ -136,3 +136,9 @@
     letter-spacing: normal;
     font-weight: 600;
 }
+
+
+.ïmg-circle{
+    width: 36px;
+    height: 36px;border-radius: 50%;
+}
