--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1074,6 +1074,12 @@ main .main-wrapper p {
   font-weight: 600;
 }
 
+.ïmg-circle {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+}
+
 .progress {
   background: var(--color-light-blue);
   border-radius: 4px;
@@ -1494,7 +1500,7 @@ tr:last-child td:last-child {
 }
 .link-label {
   font-family: Roboto;
-  font-size: 0.6875rem;
+  font-size: 0.875rem;
   line-height: 1.0625rem;
   font-weight: 400;
   text-align: left;
