--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2607,7 +2607,7 @@ label.checkbox-inline.squar-boxes .checkbox-label {
 
 .field-icon {
   position: absolute;
-  top: 50%;
+  bottom: 50%;
   -webkit-transform: translate(0%, -50%);
       -ms-transform: translate(0%, -50%);
           transform: translate(0%, -50%);
