--- a/src/assets/css/pages/login.css
+++ b/src/assets/css/pages/login.css
@@ -111,7 +111,7 @@
 
 .field-icon {
   position: absolute;
-  top: 50%;
+  bottom: 50%;
   -webkit-transform: translate(0%, -50%);
       -ms-transform: translate(0%, -50%);
           transform: translate(0%, -50%);
