--- a/src/scss/pages/remarket-tab.scss
+++ b/src/scss/pages/remarket-tab.scss
@@ -22,7 +22,7 @@
             font-size: 13px;
             line-height: 18px;
             height: 42px;
-
+display: flex;align-items: center;
             color: var(--color-black) !important;
             font-weight: 500;
             border-bottom: 1px solid #E6E6E6;
