--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1122,6 +1122,12 @@ main .main-wrapper p {
   font-size: 13px;
   line-height: 18px;
   height: 42px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: var(--color-black) !important;
   font-weight: 500;
   border-bottom: 1px solid #E6E6E6;
@@ -2619,6 +2625,22 @@ label.checkbox-inline.squar-boxes .checkbox-label {
   width: 100%;
   text-align: center;
   margin: 0 auto;
+}
+
+.nav-link .white-icon {
+  display: none;
+}
+
+.nav-link.active .blue-icon {
+  display: none;
+}
+
+.nav-link.active .white-icon {
+  display: block;
+}
+
+.search-eye {
+  max-width: unset !important;
 }
 
 @media only screen and (max-width: 575px) {
