--- a/src/assets/css/pages/login.css
+++ b/src/assets/css/pages/login.css
@@ -125,6 +125,22 @@
   margin: 0 auto;
 }
 
+.nav-link .white-icon {
+  display: none;
+}
+
+.nav-link.active .blue-icon {
+  display: none;
+}
+
+.nav-link.active .white-icon {
+  display: block;
+}
+
+.search-eye {
+  max-width: unset !important;
+}
+
 @media only screen and (max-width: 575px) {
   .fs-16 {
     font-size: 14px;
