--- a/src/assets/css/pages/remarket-tab.css
+++ b/src/assets/css/pages/remarket-tab.css
@@ -131,6 +131,12 @@
   font-size: 13px;
   line-height: 18px;
   height: 42px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: var(--color-black) !important;
   font-weight: 500;
   border-bottom: 1px solid #E6E6E6;
