--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -12,7 +12,18 @@
     margin: 0 auto;
 }
 
-
+.nav-link .white-icon{
+  display: none;
+  }
+.nav-link.active .blue-icon{
+display: none;
+}
+.nav-link.active .white-icon{
+  display: block;
+  }
+  .search-eye{
+    max-width: unset !important;
+  }
 
 @media only screen and (max-width: 575px) {
 
