--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -297,6 +297,8 @@ main {
 
             .content {
                 padding-top: 40px;
+                background: #F8FBFE;
+
             }
         }
 
