--- a/src/assets/css/pages/login.css
+++ b/src/assets/css/pages/login.css
@@ -192,6 +192,14 @@
   bottom: -5px;
 }
 
+.filter-menu {
+  width: 375px;
+}
+
+.filter-menu .checkbox-label {
+  font-size: 14px !important;
+}
+
 @media only screen and (max-width: 575px) {
   .fs-16 {
     font-size: 14px;
