--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -73,6 +73,12 @@ margin-left: 12px;
   right: 0;
   bottom: -5px;
 }
+.filter-menu{
+  width: 375px;
+}
+.filter-menu .checkbox-label{
+  font-size: 14px !important;
+}
 @media only screen and (max-width: 575px) {
 
 .fs-16 {
