--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -77,7 +77,16 @@ margin-left: 12px;
   width: 375px;
 }
 .filter-menu .checkbox-label{
-  font-size: 14px !important;
+  font-size: 14px !important  ;
+}
+
+.note-container .notes-side-bar .update-log.bg-gray {
+  background-color: rgb(236 236 236);
+  padding: 4px 8px;
+  border-radius: 2px;
+  margin-bottom: 4px;
+color: #000;
+
 }
 @media only screen and (max-width: 575px) {
 
