--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -81,6 +81,10 @@ li {
     background-color: transparent;
 }
 
+.bg-blue-light-2{
+    background: #E2F0FB !important;
+}
+
 .pt-4 {
     padding-top: 2.75rem;
 }
