--- a/src/scss/component/_input.scss
+++ b/src/scss/component/_input.scss
@@ -1,153 +1,176 @@
 @use "../utils/" as *;
 
-
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-    -webkit-box-shadow: 0 0 0 30px white inset !important;
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
 }
 
 .form-control {
-    background: #FFFFFF;
+  background: #ffffff;
+  border: 1px solid var(--color-border-light);
+
+  font-family: "Roboto";
+  border-radius: 4px;
+  height: 45px;
+  @include toRem(font-size, 15);
+  color: var(--color-black);
+  padding: 0 17px;
+  outline: none;
+  position: relative;
+
+  &::placeholder {
+    color: var(--color-light-gray);
+    font-family: "Roboto";
+  }
+
+  &:-ms-input-placeholder {
+    color: var(--color-light-gray);
+    font-family: "Roboto";
+  }
+
+  &::-ms-input-placeholder {
+    color: var(--color-light-gray);
+    font-family: "Roboto";
+  }
+
+  &:focus {
+    // border: 1px solid var(--color-primary);
     border: 1px solid var(--color-border-light);
 
-    font-family: 'Roboto';
-    border-radius: 4px;
-    height: 45px;
-    @include toRem(font-size, 15);
-    color: var(--color-black);
-    padding: 0 17px;
-    outline: none;
-    position: relative;
+    box-shadow: none;
+  }
 
-    &::placeholder {
-        color: var(--color-light-gray);
-        font-family: 'Roboto';
-    }
+  &.has-error {
+    // border: 1px solid var(--color-primary);
+    border: 1px solid var(--color-has-error);
 
-    &:-ms-input-placeholder {
-        color: var(--color-light-gray);
-        font-family: 'Roboto';
-    }
+    box-shadow: none;
+  }
 
-    &::-ms-input-placeholder {
-        color: var(--color-light-gray);
-        font-family: 'Roboto';
-    }
+  &.re-enter-code {
+    border: 1px solid var(--color-primary);
+    // border: 1px solid var(--color-border-light);
 
-    &:focus {
-        // border: 1px solid var(--color-primary);
-        border: 1px solid var(--color-border-light);
-
-        box-shadow: none;
-    }
-
-    &.has-error {
-        // border: 1px solid var(--color-primary);
-        border: 1px solid var(--color-has-error);
-
-        box-shadow: none;
-    }
-
-    &.re-enter-code {
-        border: 1px solid var(--color-primary);
-        // border: 1px solid var(--color-border-light);
-
-        box-shadow: none;
-    }
-
-
+    box-shadow: none;
+  }
 }
 
 .input-group {
-    @include flexbox();
-    @include align-items($value: center);
-    @include flex-wrap($value: nowrap);
+  @include flexbox();
+  @include align-items($value: center);
+  @include flex-wrap($value: nowrap);
+
+  input {
+    border: 0;
+    box-shadow: none;
+    width: 100%;
+    height: 100%;
+    margin-left: 15px !important;
+
+    &:focus {
+      outline: none;
+      border: none;
+    }
+  }
+
+  &.search {
+    border: 1px solid #e6e6e6;
+    padding-left: 10px;
+    border-radius: 4px;
 
     input {
-        border: 0;
-        box-shadow: none;
-        width: 100%;
-        height: 100%;
-        margin-left: 15px !important;
-
-        &:focus {
-            outline: none;
-            border: none;
-        }
+      margin-left: 0 !important;
+      padding: 14px 10px;
     }
-
-    &.search {
-        border: 1px solid #E6E6E6;
-        padding-left: 10px;
-        border-radius: 4px;
-
-        input {
-            margin-left: 0 !important;
-            padding: 14px 10px;
-        }
-
-    }
+  }
 }
 
-
 input.date-control {
-    background: var(--color-white) url('../../images/calender-icon.svg');
-    background-repeat: no-repeat;
-    background-position: calc(100% - 15px) center;
+  background: var(--color-white) url("../../images/calender-icon.svg");
+  background-repeat: no-repeat;
+  background-position: calc(100% - 15px) center;
 }
 
 input[type="date"]::-webkit-inner-spin-button,
 input[type="date"]::-webkit-calendar-picker-indicator {
-    opacity: 0;
+  opacity: 0;
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
-    background: transparent;
-    bottom: 0;
-    color: transparent;
-    cursor: pointer;
-    height: auto;
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: auto;
+  background: transparent;
+  bottom: 0;
+  color: transparent;
+  cursor: pointer;
+  height: auto;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: auto;
 }
 
-
-
 @media only screen and (max-width: 575px) {
-    .form-control {
+  .form-control {
+    @include toRem(font-size, 13);
+    color: var(--color-black);
+    padding: 0 12px;
 
-        @include toRem(font-size, 13);
-        color: var(--color-black);
-        padding: 0 12px;
-
-
-        &::placeholder {
-            color: var(--color-light-gray);
-        }
-
-        &:-ms-input-placeholder {
-            color: var(--color-light-gray);
-        }
-
-        &::-ms-input-placeholder {
-            color: var(--color-light-gray);
-        }
-
-
-
-
+    &::placeholder {
+      color: var(--color-light-gray);
     }
+
+    &:-ms-input-placeholder {
+      color: var(--color-light-gray);
+    }
+
+    &::-ms-input-placeholder {
+      color: var(--color-light-gray);
+    }
+  }
 }
 
 @media only screen and (min-width: 1400px) {
-    .form-control {
-        height: 50px;
-        @include toRem(font-size, 16);
+  .form-control {
+    height: 50px;
+    @include toRem(font-size, 16);
+  }
+}
 
-    }
+.radio-btn {
+  .radio-custom {
+    display: none;
+  }
+
+  .radio-label {
+    padding: 12px 26px;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    text-transform: uppercase;
+    color: var(--color-blue);
+    font-weight: 700;
+    font-size: 16px !important;
+    line-height: 22px;
+    margin-left: 0;
+  }
+
+  input.radio-control:checked ~ .radio-label {
+    background: linear-gradient(0deg, #e6f1f9, #e6f1f9),
+      linear-gradient(0deg, #b3d3ec, #b3d3ec);
+    border: 1px solid #b3d3ec;
+
+    &:after {
+        content: "";
+        width: 7px;
+        height: 12px;
+        border: 1px solid #016bbf;
+        display: inline-block;
+        border-width: 0 2px 2px 0;
+        transform: rotate(45deg);
+        bottom: 2px;
+        position: relative;
+        margin-left: 5px;
+      }
+  }
 }
