--- a/src/scss/pages/_housing-insurance.scss
+++ b/src/scss/pages/_housing-insurance.scss
@@ -4,16 +4,14 @@
   background: linear-gradient(0deg, #f2f7fc, #f2f7fc),
     linear-gradient(0deg, #e6e6e6, #e6e6e6);
   border-radius: 4px;
-  border: 1px solid #E6E6E6;
-  }
+  border: 1px solid #e6e6e6;
+}
 
-
-  
 label.checkbox-inline.squar-boxes {
   width: 150px;
   height: 130px;
   background: white;
-  margin: 20px;
+  margin: 20px 20px 20px 0;
   border-radius: 12px;
   box-shadow: 0px 20px 30px 0px #00000014;
   padding: 16px;
@@ -22,9 +20,19 @@ label.checkbox-inline.squar-boxes {
   align-items: center;
   justify-content: center;
   position: relative;
-  .checkbox-control:checked ~ .checkbox-custom {
-    background: transparent;
+  
+  .checkbox-control{
+    &:checked ~ .checkbox-custom {
+      background: transparent;
+    }
+    &:checked ~ .checkbox-label img.active{
+      display: block;
+    }
+    &:checked ~ .checkbox-label img.offline {
+      display: none;
+    }
   }
+
   .checkbox-custom {
     position: absolute;
     top: 20px;
@@ -39,7 +47,60 @@ label.checkbox-inline.squar-boxes {
     }
   }
 
-  .checkbox-label{
+  .checkbox-label {
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  img.offline,
+  img.active{
+    width: 60px;
+    height: 60px;
+  }
+
+  img.active{
+    display: none;
+  }
+  img.offline {
+    display: block;
+  }
+}
+
+.accordion.custom{
+  > .accordion-item.accordion-white.bordered{
+    border: 1px solid #E6E6E6;
+    box-shadow: none;
+    
+   > .accordion-collapse.show{
+      border-top: 1px solid #E6E6E6;
+      
+    }
+  }
+}
+
+.accordion.custom.collectables .accordion-collapse{
+  .accordion.custom .accordion-button{
+    background: var(--color-blue-light2);
+    border-color: var(--color-border-light);
+    padding-left: 16px;
+    padding-bottom: 14px;
+  }
+}
+
+.accordion.custom .accordion-item{
+  position: relative;
+}
+
+.keep-in-vault {
+  position: absolute;
+  right: 50px;
+  top: 13px;
+  z-index: 100000;
+  checkbox-label {
+    font-weight: 300;
   }
 }
