--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -338,6 +338,10 @@ a {
   color: var(--color-sucess);
 }
 
+.text-orange {
+  color: #F68A1F;
+}
+
 .bg-light-blue {
   background-color: #F2F7FC;
 }
@@ -2774,6 +2778,12 @@ label.checkbox-inline.squar-boxes img.offline {
   border-radius: 2px;
   margin-bottom: 4px;
   color: #000;
+}
+
+.policy-cards {
+  background-color: var(--color-blue-light);
+  padding: 0 10px;
+  border: none;
 }
 
 @media only screen and (max-width: 575px) {
