--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -49,6 +49,10 @@ a {
     color: var(--color-sucess);
 
 }
+.text-orange {
+    color: #F68A1F;
+
+}
 
 .bg-light-blue{
     background-color: #F2F7FC;
