--- a/src/assets/css/pages/login.css
+++ b/src/assets/css/pages/login.css
@@ -208,6 +208,12 @@
   color: #000;
 }
 
+.policy-cards {
+  background-color: var(--color-blue-light);
+  padding: 0 10px;
+  border: none;
+}
+
 @media only screen and (max-width: 575px) {
   .fs-16 {
     font-size: 14px;
