--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -88,6 +88,11 @@ margin-left: 12px;
 color: #000;
 
 }
+.policy-cards {
+  background-color: var(--color-blue-light);
+  padding: 0 10px;
+  border: none;
+}
 @media only screen and (max-width: 575px) {
 
 .fs-16 {
